--- a/main.css
+++ b/main.css
@@ -202,14 +202,14 @@ div.quote {
 }
 
 div.icon img {
-    width: 90%;
+    width: 70%;
     border: 2px solid rgba(255, 255, 255, 0.363);
     padding: 5px;
 }
 
 div.event img {
-    height: 70%;
-    width: 70%;
+    height: 180px;
+    width: 200px;
     padding: 5px;
 }
 
@@ -302,7 +302,7 @@ label.eventlabel {
 
 label.exelabel {
     color: rgb(0, 0, 0);
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
     padding-top: 25px;
 }
@@ -325,7 +325,7 @@ label.exelabel {
 
 /*##### MOBILE #######*/
 
-@media screen and (max-width:350px) {
+@media screen and (max-width:680px) {
     body {
         overflow-x: hidden;
     }
